# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

include_directories (
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  )

if ( ZLIB_FOUND )
  include_directories(${ZLIBINCLUDE_DIRS})
endif ()

if ( BZIP2_FOUND )
  include_directories(${BZIP2_INCLUDE_DIRS})
endif ()

if ( LIBLZMA_FOUND )
  include_directories(${LIBLZMA_INCLUDE_DIRS})
endif ()

if ( POPT_FOUND )
  include_directories(${POPT_INCLUDE_DIR})
endif ()


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tests )


# ===================================================================
# コンフィグレーション依存のファイルの生成
# ===================================================================
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/etc/ym_codec.h.in"
  "${PROJECT_BINARY_DIR}/include/ym_codec.h"
  )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( codec_SOURCES
  c++-srcs//CodecEngine.cc
  c++-srcs/ZEngine.cc
  )

if ( ZLIB_FOUND )
  set ( codec_SOURCES ${codec_SOURCES}
    c++-srcs/GzEngine.cc
    )
endif ( ZLIB_FOUND )

if ( BZIP2_FOUND )
  set ( codec_SOURCES ${codec_SOURCES}
    c++-srcs/BzEngine.cc
    )
endif ( BZIP2_FOUND )

if ( LIBLZMA_FOUND )
  set ( codec_SOURCES ${codec_SOURCES}
    c++-srcs/XzEngine.cc
    )
endif ( LIBLZMA_FOUND )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_codec
  ${codec_SOURCES}
  )
